tests/hopix/typechecker/bad/idapp.hopix
val zero = (\['a](x : 'a) => (x : 'a))[bool](0)
